# cmd/server/wire_gen.go
@@ -46,9 +46,13 @@ func InitServer(ctx context.Context, dsn database.DSN, pdConf *pd.Config, name c
 	objectTypes := &server.ObjectTypes{
 		Storage: storage,
 	}
+	relationTypes := &server.RelationTypes{
+		Storage: storage,
+	}
 	serverServer := &server.Server{
-		Objects:     objects,
-		ObjectTypes: objectTypes,
+		Objects:       objects,
+		ObjectTypes:   objectTypes,
+		RelationTypes: relationTypes,
 	}
 	return serverServer, nil
 }
