# pkg/server/server.go
@@ -22,13 +22,16 @@ import (
 )
 
 type Server struct {
-	Objects     *Objects
-	ObjectTypes *ObjectTypes
+	Objects       *Objects
+	ObjectTypes   *ObjectTypes
+	RelationTypes *RelationTypes
 }
 
 func (s *Server) Register(server *grpc.Server, mux *runtime.ServeMux) {
 	v1.RegisterObjectsServer(server, s.Objects)
 	v1.RegisterObjectTypesServer(server, s.ObjectTypes)
+	v1.RegisterRelationTypesServer(server, s.RelationTypes)
 	_ = v1.RegisterObjectsHandlerServer(context.Background(), mux, s.Objects)
 	_ = v1.RegisterObjectTypesHandlerServer(context.Background(), mux, s.ObjectTypes)
+	_ = v1.RegisterRelationTypesHandlerServer(context.Background(), mux, s.RelationTypes)
 }
